Update java 17 syntax